Improving bookdoc.Visitor